--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-
+<html>
+<head>
+    <link href="1.css" type="text/css" rel="stylesheet"/>
+    <title>
+    Alfred's Prep for 10.3
+    </title>
+</head>
+<body>
+<h1>
+Displaying Distribution
+</h1>
+<p>
+    <i>What is a distribution?</i> The distribution helps dispaly the various outcomes in a sample by showing the frequencies of a specific number or within an interval.
+</p>
+<p>
+<i>Level:</i> the level is a norm, and provides the average size of the data like the mode, the mean, and the median. Those are sometimes called measures of central tendency. They gives some informations about how is the distribution looked like. Becasue we can mostly get how the distribution is skewed. 
+<br>
+    <i>Shape:</i> can be displayed in many ways. The neat thing of shape is that it can tell us the basic information of the distribution like the level and spread. We can put it that way. The level and the spread define the shape of the distribution, and that's why through the shape, we can analyze the level and the spread.
+<figure><img src="level.png"><figurcaption>This is a perfect example to show how the level can be used to predict the shape of the distribution and how level can be reflected from the shape. </figurcaption></figure>
+    </p>
+    <p>
+        <i>Spread:</i> can describe how extent the distribution is. The range can help define the maximum and the minimun of the distribution, which give us the starting point and the ending point. With the level counted, measures like variance, standard deviation, interquartile range can give us more details about the distribution.
+    <br>
+        <i>Outliers:</i> is the weirdo who will not fit the norm, which means it differs significantly from other data. An outlier is easily observed and it will affect the range of distribution.
+<figure><img src="2.jpg"><figurcaption>This is an example to show how the spread can describe the extent of the distribution, and how outliers are significantly different. </figurcaption></figure>
+    </p>
+<p class="p">
+<img class="a" src="own.jpg">
+    <i>My Own Example:</i> there is a histogram I draw for the 2017 % growth in GDP per capita of countries all over the world. There are 230 data. From the graph, can you tell me the shape of it and make any guess about the level?
+    <br><br><br><br><br><br><br><br>
+    Guess what?<br>
+    It is left-skewed.The mode is between 1 and 2! The mean is smaller than the median!
+</p>
+</body>
+</html>
